fixed bug where firefox adds whitespace to bottom. resize on window size change

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@
   padding-bottom: 0px !important;
 }
 
+body {
+  font-size: 0;
+  overflow: hidden;
+}
+
 .no-margin {
   margin-right: 0px !important;
   margin-left: 0px !important;
